Bug 440155 - Brushes behave differently in krita-nightly-x64-5.0.0-prealpha-5cc93f9c94
Summary: Brushes behave differently in krita-nightly-x64-5.0.0-prealpha-5cc93f9c94
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-22 12:21 UTC by Gremriel
Modified: 2021-07-27 10:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example of brush behavior between Nightlies (127.79 KB, image/png)
2021-07-22 12:21 UTC, Gremriel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gremriel 2021-07-22 12:21:27 UTC
Created attachment 140255 [details]
Example of brush behavior between Nightlies

SUMMARY

I noticed this when I used the Crayon brushes form RamonM. See the attached image

STEPS TO REPRODUCE
1. Prior to krita-nightly-x64-5.0.0-prealpha-5cc93f9c94, the brushes behave as expected
2. In krita-nightly-x64-5.0.0-prealpha-5cc93f9c94, the brushes look very different, it seems the brushtips aren't loaded correctly




EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2021-07-27 10:08:22 UTC
Git commit 0a05951565bda7c26c071ab93c57f270589154bf by Halla Rempt.
Committed on 27/07/2021 at 10:07.
Pushed by rempt into branch 'master'.

Add compatibility with legacy presets using the bytearray md5sum

M  +1    -1    plugins/paintops/libpaintop/KisTextureMaskInfo.cpp
M  +10   -2    plugins/paintops/libpaintop/kis_linked_pattern_manager.cpp
M  +1    -1    plugins/paintops/libpaintop/kis_texture_option.cpp

https://invent.kde.org/graphics/krita/commit/0a05951565bda7c26c071ab93c57f270589154bf