Add compatibility with legacy presets using the bytearray md5sum

BUG:440155